test/fixtures/fixtures/type-error/voidIf.lys.ast.desugar
|-Document(0,49)
  |-FunctionDirective(1,49)
    |-Decorators(1,1)
      <Rule0>
    |-FunDeclaration(1,49)
      |-FunctionName(5,9)
        |-NameIdentifier(5,9)
          |-Identifier=test
      |-TypeParameters(9,9)
        <Rule0>
      |-FunctionParamsList(9,17)
        |-(List)(10,16)
          |-Parameter(10,16)
            |-NameIdentifier(10,11)
              |-Identifier=x
            |-Reference(13,16)
              |-QName(13,16)
                |-NameIdentifier(13,16)
                  |-Identifier=i32
      |-ReturnType(17,23)
        |-Reference(19,22)
          |-QName(19,22)
            |-NameIdentifier(19,22)
              |-Identifier=i32
      |-FunctionBody(23,49)
        |-IfExpression(27,49)
          |-Condition(30,37)
            |-BinaryOpExpression(31,36)
              |-Reference(31,32)
                |-QName(31,32)
                  |-NameIdentifier(31,32)
                    |-Identifier=x
              |-Operator=>
              |-NumberLiteral=0
          |-CodeBlock(38,49)
            |-NumberLiteral=1
  |-EndOfFile=